...

    <!-- Other -->
    <string name="confirm_label">Confirm</string>
    <string name="cancel_label">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reset">Reset</string>
...
    <string name="feed_new_episodes_action_add_to_inbox">Add to inbox</string>
    <string name="feed_new_episodes_action_nothing">Nothing</string>
    <string name="episode_cleanup_never">Never</string>
    <string name="episode_cleanup_except_favorite_removal">When not favorited</string>
    <string name="episode_cleanup_queue_removal">When not in queue</string>
    <string name="episode_cleanup_after_listening">After finishing</string>
    <plurals name="episode_cleanup_hours_after_listening">
        <item quantity="one">1 hour after finishing</item>
...
    <string name="preference_search_no_results">No results</string>
    <string name="preference_search_clear_history">Clear history</string>
    <string name="pref_episode_cleanup_title">Episode cleanup</string>
    <string name="pref_episode_cleanup_summary">Episodes that should be eligible for removal if Auto Download needs space for new episodes</string>
    <string name="pref_pauseOnDisconnect_sum">Pause playback when headphones or bluetooth are disconnected</string>
...
    <string name="pref_followQueue_sum">Jump to next queue item when playback completes</string>
    <string name="pref_auto_delete_sum">Delete episode when playback completes</string>
    <string name="pref_auto_delete_title">Auto delete</string>
    <string name="pref_auto_local_delete_title">Auto delete from local folders</string>
    <string name="pref_auto_local_delete_sum">Include local folders in Auto delete functionality</string>
    <string name="pref_auto_local_delete_dialog_body">Note that for local folders this will remove episodes from Hidden Pod and delete their media files from your device storage. They cannot be downloaded again through Hidden Pod. Enable auto delete?</string>
...
    <string name="pref_favorite_keeps_episodes_sum">Keep episodes when they are marked favorite</string>
    <string name="pref_favorite_keeps_episodes_title">Keep favorite episodes</string>
    <string name="playback_pref">Playback</string>
    <string name="playback_pref_sum">Headphone controls, Skip intervals, Queue</string>
    <string name="downloads_pref">Downloads</string>
    <string name="downloads_pref_sum">Update interval, Mobile data, Automatic download, Automatic deletion</string>
    <string name="feed_refresh_title">Refresh podcasts</string>
...
    <string name="feed_every_24_hours">Every day</string>
    <string name="feed_every_72_hours">Every 3 days</string>
    <string name="pref_followQueue_title">Continuous playback</string>
    <string name="pref_pauseOnHeadsetDisconnect_title">Headphones or Bluetooth disconnect</string>
    <string name="pref_unpauseOnHeadsetReconnect_title">Headphones reconnect</string>
    <string name="pref_unpauseOnBluetoothReconnect_title">Bluetooth reconnect</string>
    <string name="pref_stream_over_download_title">Prefer streaming</string>
    <string name="pref_stream_over_download_sum">Display stream button instead of download button in lists</string>
...
    <string name="pref_mobileUpdate_episode_download">Episode download</string>
    <string name="pref_mobileUpdate_streaming">Streaming</string>
    <string name="user_interface_label">User interface</string>
    <string name="user_interface_sum">Appearance, subscriptions, lockscreen</string>
    <string name="pref_black_theme_title">Full black</string>
...
    <string name="pref_nav_drawer_feed_counter_title">Set subscription counter</string>
    <string name="pref_nav_drawer_feed_counter_sum">Change the information displayed by the subscription counter. Also affects the sorting of subscriptions if \'Subscription Order\' is set to \'Counter\'.</string>
    <string name="pref_automatic_download_title">Automatic download</string>
    <string name="pref_automatic_download_sum">Configure the automatic download of episodes</string>
    <string name="pref_autodl_wifi_filter_title">Enable Wi-Fi filter</string>
    <string name="pref_autodl_wifi_filter_sum">Allow automatic download only for selected Wi-Fi networks.</string>
    <string name="pref_automatic_download_on_battery_title">Download when not charging</string>
    <string name="pref_automatic_download_on_battery_sum">Allow automatic download when the battery is not charging</string>
    <string name="pref_episode_cache_title">Episode cache</string>
    <string name="pref_episode_cache_summary">Total number of downloaded episodes cached on the device. Automatic download will be suspended if this number is reached.</string>
    <string name="pref_episode_cover_title">Use episode cover</string>
...
    <string name="pref_playback_time_respects_speed_title">Adjust media info to playback speed</string>
    <string name="pref_playback_time_respects_speed_sum">Displayed position and duration are adapted to playback speed</string>
    <string name="pref_fast_forward">Fast forward skip time</string>
    <string name="pref_fast_forward_sum">Customize the number of seconds to jump forward when the fast forward button is clicked</string>
    <string name="pref_rewind">Rewind skip time</string>
    <string name="pref_rewind_sum">Customize the number of seconds to jump backwards when the rewind button is clicked</string>
    <string name="pref_expandNotify_title">High notification priority</string>
    <string name="pref_expandNotify_sum">This usually expands the notification to show playback buttons.</string>
    <string name="pref_persistNotify_title">Persistent playback controls</string>
    <string name="pref_persistNotify_sum">Keep notification and lockscreen controls when playback is paused</string>
    <string name="pref_compact_notification_buttons_title">Set compact notification buttons</string>
    <string name="pref_compact_notification_buttons_sum">Change the playback buttons when the notification is collapsed. The play/pause button is always included.</string>
    <string name="pref_compact_notification_buttons_dialog_title">Select a maximum of %1$d items</string>
    <string name="pref_compact_notification_buttons_dialog_error">You can only select a maximum of %1$d items.</string>
    <string name="pref_enqueue_location_title">Enqueue location</string>
    <string name="pref_enqueue_location_sum">Add episodes to: %1$s</string>
    <string name="enqueue_location_back">Back</string>
    <string name="enqueue_location_front">Front</string>
    <string name="enqueue_location_after_current">After current episode</string>
    <string name="enqueue_location_random">Random</string>
    <string name="pref_smart_mark_as_played_disabled">Disabled</string>
    <string name="documentation_support">Documentation &amp; support</string>
...
    <string name="pref_back_button_opens_drawer_summary">Pressing the back button on the default page opens the navigation drawer</string>
    <string name="remember_last_page">Remember last page</string>
    <string name="pref_delete_removes_from_queue_title">Delete removes from queue</string>
    <string name="pref_delete_removes_from_queue_sum">Automatically remove an episode from the queue when it is deleted</string>
    <string name="pref_filter_feed_title">Subscription filter</string>
...
    <string name="choose_data_directory_available_space">%1$s of %2$s free</string>
    <string name="pref_pausePlaybackForFocusLoss_sum">Pause playback instead of lowering volume when another app wants to play sounds</string>
    <string name="pref_pausePlaybackForFocusLoss_title">Pause for interruptions</string>

    <!-- Online feed view -->
...
    <!-- Audio controls -->
    <string name="audio_controls">Audio controls</string>
    <string name="playback_speed">Playback speed</string>
    <string name="audio_effects">Audio effects</string>
    <string name="player_switch_to_audio_only">Switch to audio only</string>
...
